@@ -27,6 +27,9 @@ Changes from 0.2 to 0.3
 - New `trim()` method for `carray` and `ctable` objects for trimming
   items.
 
+- New `resize()` method for `carray` and `ctable` objects for resizing
+  lengths.
+
 - New `test()` function that runs the complete test suite.
 
 - Added a new `eval()` function to evaluate expressions including any
